(library
 (name bap)
 (public_name bap-std)
 (wrapped false)
 (preprocess (pps ppx_bap))
 (libraries
   bap-bundle
   bap-core-theory
   bap_disasm
   bap-future
   bap_image
   bap-knowledge
   bap-main
   bap_sema
   bap_types
   bitvec
   bitvec-binprot
   bitvec-order
   bitvec-sexp
   core_kernel
   core_kernel.caml_unix
   fileutils
   graphlib
   monads
   ogre
   regular)
 (modules bap bap_project bap_self)
 (private_modules bap_project bap_self))


(library
 (name bap_init_toplevel)
 (public_name bap.top)
 (modes byte)
 (modules bap_init_toplevel)
 (optional)
 (libraries
   bap
   bap-main
   dune-site.toplevel ; to disable when toplevel support is not present
   compiler-libs
   compiler-libs.common))
