(library
 (name bap_disasm)
 (public_name bap-std.disasm)
 (wrapped false)
 (preprocess (pps ppx_bap))
 (libraries
   bap-core-theory
   bap-future
   bap-knowledge
   bap-main
   bap-relation
   bap_image
   bap_types
   bitvec
   bitvec-order
   camlzip
   core_kernel
   graphlib
   monads
   ocamlgraph
   ogre
   regular
   zarith)
 (foreign_stubs
  (language cxx)
  (names disasm)
  (extra_deps (glob_files *.hpp))
  (flags -std=c++11 -fPIC -O3))
 (foreign_stubs
  (language c)
  (names disasm_stubs)
  (flags -O3))
 (c_library_flags -lstdc++))

(install
 (package bap-std)
 (section lib)
 (files disasm.h disasm.hpp))
