(library
  (name bap_primus)
  (public_name bap-primus)
  (preprocess (pps ppx_bap))
  (wrapped false)
  (libraries
    bap
    bap-abi
    bap-c
    bap-core-theory
    bap-future
    bap-knowledge
    bap-strings
    bitvec
    bitvec-binprot
    core_kernel
    graphlib
    monads
    parsexp
    regular
    uuidm
    zarith))