(library
  (name bap_types)
  (public_name bap-std.types)
  (wrapped false)
  (preprocess (pps ppx_bap))
  (libraries
     bap-core-theory
     bap-knowledge
     bap-main
     bitvec
     bitvec-order
     bitvec-sexp
     core_kernel
     graphlib
     monads
     ogre
     regular
     uuidm
     zarith))