(library
  (name api)
  (public_name bap-api.plugin)
  (preprocess (pps ppx_bap))
  (libraries
    bap
    bap-api
    core_kernel
    fileutils
    regular))

(plugin
  (name api)
  (package bap-api)
  (libraries bap-api.plugin)
  (site (bap-common plugins)))


(rule
 (target api_sites.ml)
 (deps api_sites.ml.ab (alias ../../config))
 (action
  (with-stdin-from %{deps}
   (with-stdout-to %{target}
    (chdir %{workspace_root}
     (run ./tools/rewrite.exe -filename %{deps}))))))
